# inventario-backend/app/inventario/api_v1_0/resources.py
@@ -1,7 +1,7 @@
 from flask import request, Blueprint
 from flask_restful import Api, Resource
 
-from app.inventario.api_v1_0.logic import SistemaService
+from app.inventario.api_v1_0.logic import SistemaInformacionService, UnidadDir3Service
 from app.security import token_required
 
 api_v1_0_bp = Blueprint("api_v1_0_bp", __name__)
@@ -14,18 +14,30 @@ class SistemasInformacionResource(Resource):
         page = request.args.get("page", 1, type=int)
         page_size = request.args.get("page_size", 25, type=int)
 
-        return SistemaService.get_aplicaciones(page, page_size)
+        return SistemaInformacionService.get_sistemas(page, page_size)
 
     @token_required
     def post(self, jwt_token=None):
-        SistemaService.altaAplicacion(request.get_json())
+        sistema_id = request.get_json().get("sistema_id")
+        SistemaInformacionService.alta_sistema(request.get_json())
+        return SistemaInformacionService.get_sistema(sistema_id)
 
 
 class SistemaInformacionResource(Resource):
     @token_required
     def get(self, sistema_id, jwt_token=None):
-        return SistemaService.get_sistema(sistema_id)
+        return SistemaInformacionService.get_sistema(sistema_id)
 
+    @token_required
+    def put(self, sistema_id, jwt_token=None):
+        SistemaInformacionService.modificar_sistema(sistema_id, request.get_json())
+        return SistemaInformacionService.get_sistema(sistema_id)
+
+
+class UnidadesDir3Resource(Resource):
+    @token_required
+    def get(self, jwt_token=None):
+        return UnidadDir3Service.buscar_unidades(unidad_id=request.args.get('id'), nombre=request.args.get('nombre'))
 
 api.add_resource(
     SistemasInformacionResource,
@@ -39,3 +51,8 @@ api.add_resource(
     endpoint="sistema_resource",
 )
 
+api.add_resource(
+    UnidadesDir3Resource,
+    '/api/v1/dir3/unidades/',
+    endpoint="unidades_resource",
+)
