# inventario-backend/app/inventario/api_v1_0/schemas.py
@@ -6,6 +6,7 @@ from app.ext import ma
 class SistemaSchema(ma.Schema):
     sistema_id = fields.String()
     nombre = fields.String()
+    observaciones = fields.String(required=False)
     
 class ListaPaginable:
     def __init__(self, items, total, page, page_size):
@@ -19,4 +20,17 @@ class ListaPaginableSistemasSchema(ma.Schema):
     total = fields.Integer()
     page = fields.Integer()
     page_size = fields.Integer()
-    
+
+
+class UnidadSchema(ma.Schema):
+    unidad_id = fields.String(attribute="C_ID_UD_ORGANICA")
+    unidad_padre_id = fields.String(attribute="C_ID_DEP_UD_SUPERIOR")
+    nombre = fields.String(attribute="C_DNM_UD_ORGANICA")
+    nombre_unidad_padre = fields.String(attribute="C_DNM_UD_ORGANICA_SUPERIOR")
+
+
+class ListaPaginableUnidadesSchema(ma.Schema):
+    items = fields.List(fields.Nested(UnidadSchema))
+    total = fields.Integer()
+    page = fields.Integer()
+    page_size = fields.Integer()
